# CupEngine

./: .clang-format  CMakeLists.txt  README.md  build.sh  debug.sh
src/: main.cpp  resource_manager.cpp  resource_manager.hpp
src/ecs/: archetype.cpp  archetype.hpp  component_array.hpp  component_manager.cpp  component_manager.hpp  ecs.cpp  ecs.hpp  entity_manager.cpp  entity_manager.hpp  typedefs.hpp
src/ecs/components/: rigidbody.hpp  sprite_renderer.hpp  transform.hpp
src/ecs/systems/: physics.cpp  physics.hpp  sprite_renderer_system.cpp  sprite_renderer_system.hpp
src/graphics/: app.cpp  app.hpp  camera.cpp  camera.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  pipeline_create_info.cpp  pipeline_create_info.hpp  push_constant_data.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  sprite.cpp  sprite.hpp  swap_chain.cpp  swap_chain.hpp  types.hpp  validator.cpp  validator.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
src/graphics/shader/: default.frag  default.vert
src/graphics/shader/src/: default_shader.frag
src/inputs/: action.cpp  action.hpp  action.tpp  action_map.cpp  action_map.hpp  binding.hpp  input_manager.cpp  input_manager.hpp  mappings.hpp  types.hpp
src/utils/: debug_utils.hpp  types.hpp
